[package]
name = "yawcli"
version = "0.2.1"
edition = "2021"
authors = ["John Bullard <johnbcooding@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "CLI tool that uses your IP address to provide local weather data. Does not work outside the USA."
readme = "README.md"
homepage = "https://github.com/JohnBCoding/yawcli"
repository = "https://github.com/JohnBCoding/yawcli"
keywords = ["cli", "weather", "ip"]
categories = ["command-line-utilities"]

[dependencies]
clap = "2.33"
reqwest = {version = "0.11", features = ["blocking", "json"]}
scraper = "0.13"
serde = {version = "1.0", features = ["derive"] }
chrono = "0.4.23"

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "2.1.4"
